# sae_vis

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  _feature_vis_demo.html  _feature_vis_demo.json  _feature_vis_demo_custom.html  _feature_vis_demo_gpt.html  _prompt_vis_demo.html  _prompt_vis_demo_custom.html  demo.ipynb  feature_vis_demo_repo.html  prompt_data.html  prompt_data.json  prompt_vis_demo_repo.html  pyproject.toml  setup.py
.github/workflows/: ci.yaml
sae_vis/: __init__.py  data_config_classes.py  data_fetching_fns.py  data_storing_fns.py  html_fns.py  init.js  model_fns.py  style.css  utils_fns.py
sae_vis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sae_vis/css/: general.css  sequences.css  tables.css
sae_vis/demos/: _demo_feature_vis_attn2l.html  demo.py  demo_prompt_vis.html  train_othello.py
sae_vis/html/: acts_histogram_template.html  feature_tables_template.html  left_tables_template.html  logits_histogram_template.html  middle_plots.html  token_template.html
sae_vis/js/: _createDropdownsScript.js  _setupPageScript.js  actsHistogramScript.js  featureTablesScript.js  hovertext.js  logitsHistogramScript.js  logitsTableScript.js  tokenScript.js
tests/: conftest.py  test_data_storing_fns.py
