[tool.poetry]
name = "sae-vis"
version = "0.3.6"
description = "Open-source SAE visualizer, based on Anthropic's published visualizer."
authors = ["Callum McDougall <cal.s.mcdougall@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
einops = "^0.7.0"
datasets = "^2.0.0"
dataclasses-json = "^0.6.4"
jaxtyping = "^0.2.28"
transformer-lens = ">=2.0.0,<3.0.0"
eindex-callum = "^0.1.0"
rich = "^13.7.1"
matplotlib = "^3.8.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
pytest = "^8.1.1"
ipykernel = "^6.29.4"

[tool.isort]
profile = "black"
src_paths = ["sae_vis", "tests"]

[tool.ruff]
exclude = ["sae_vis/css", "sae_vis/js", "sae_vis/html"]

[tool.ruff.lint]
ignore = ["E203", "E501", "E731", "F722", "E741", "F821", "F403", "ARG002"]
extend-select = ["UP", "TID", "I", "F", "E", "ARG"]

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"typing.Union".msg = "Use `|` instead"
"typing.Optional".msg = "Use `| None` instead"
"typing.Dict".msg = "Use `dict` instead"
"typing.List".msg = "Use `list` instead"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variables = [
    "sae_vis/__init__.py:__version__",
    "pyproject.toml:version",
]
branch = "main"
build_command = "pip install poetry && poetry build"
